[package]
name = "vect-crdt-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug = [] # console log macro

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.89"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.65"
serde-wasm-bindgen = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
tsify = "0.4.5"
serde_json = "1.0"
unique_id = "0.1.5"
getrandom = { version = "0.2", features = ["js"] }
partially = { version = "0.2.0", features = ["derive"] }
wasm-timer = "0.2.5"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"